--- a/GAMES.html
+++ b/GAMES.html
@@ -27,11 +27,11 @@
 
   <link rel="stylesheet" href="css/slick-theme.css" />
   <!-- font awesome style -->
-  <link href="css/font-awesome.min.css" rel="stylesheet" />
+  <link href="font-awesome.min.css" rel="stylesheet" />
   <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="style.css" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
+  <link href="responsive.css" rel="stylesheet" />
 
 </head>
 
