--- a/about.html
+++ b/about.html
@@ -24,13 +24,13 @@
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,600,700&display=swap" rel="stylesheet" />
   <!-- slick slider -->
 
-  <link rel="stylesheet" href="css/slick-theme.css" />
+  <link rel="stylesheet" href="slick-theme.css" />
   <!-- font awesome style -->
   <link href="css/font-awesome.min.css" rel="stylesheet" />
   <!-- Custom styles for this template -->
-  <link href="css/style.css" rel="stylesheet" />
+  <link href="style.css" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="css/responsive.css" rel="stylesheet" />
+  <link href="responsive.css" rel="stylesheet" />
 
 </head>
 
